# Simple-File-Transfer-Desktop

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  main_functions.cpp  makefile  sft-windows.sln  sft-windows.vcxproj  sft-windows.vcxproj.filters  vcpkg.json  win32actions.cpp
include/: ErrorResult.h  SecureContainer.h  SecureSession.hpp  aes-gcm.h  asymCrypt.hpp  common.hpp  coroutine.hpp  io.h  io.hpp  main.h  main_transfer.tpp  sftclass.hpp  util.hpp
src/: aes-gcm.cpp  io.cpp  main.cpp  main_functions.cpp  win32actions.cpp
tests/: main_transfer_test.cpp
